<resources>
    <string name="app_name">TetrisGroupProject</string>
    <string name="settings_title">Settings</string>
    <string name="enable_dark_mode">Enable Dark Mode: </string>
    <string name="change_gui_size">Larger GUI: </string>
    <string name="leaderboard">Leaderboard</string>
    <string name="play">PLAY</string>
    <string name="title">ANTI-GRAVITY TETRIS</string>

    <string name="play_again">PLAY AGAIN?</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="end_leaderboard">Top 5 Leaderboard</string>
    <string name="gui_size">GUI Size: </string>
    <string-array name="spinnerSwitchGUI">
        <item>Small</item>
        <item>Large</item>
    </string-array>
</resources>