<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:id="@+id/popup_layout">

    <TextView
        android:id="@+id/settings_title"
        android:text="@string/settings_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Switch
        android:id="@+id/switchDarkMode"
        android:text="@string/enable_dark_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/switchLargeGUI"
        android:text="@string/change_gui_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        tools:ignore="UseSwitchCompatOrMaterialXml"/>

</LinearLayout>
