<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/endLeaderboardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_leaderboard"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            />

        <LinearLayout
            android:id="@+id/leaderboardLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/endLeaderboardTitle"
            android:background="@drawable/leaderboard_container"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Name"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:id="@+id/name_header"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Score"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:id="@+id/score_header"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Level"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:id="@+id/level_header"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >
                <TextView
                    android:id="@+id/r1_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="1. NA"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/r1_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="NA"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/r1_level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="NA"
                    android:textSize="20sp"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/black"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >

                <TextView
                    android:id="@+id/r2_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="2. NA"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/r2_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="NA"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/r2_level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="NA"
                    android:textSize="20sp"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/black"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >

                <TextView
                    android:id="@+id/r3_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="3. NA"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/r3_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="NA"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/r3_level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="NA"
                    android:textSize="20sp"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/black"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >

                <TextView
                    android:id="@+id/r4_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="4. NA"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/r4_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="NA"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/r4_level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="NA"
                    android:textSize="20sp"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/black"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >

                <TextView
                    android:id="@+id/r5_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="5. NA"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/r5_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="NA"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/r5_level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="NA"
                    android:textSize="20sp"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/nameDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name:"
            android:textSize="36sp"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/scoreDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score:"
            android:textSize="36sp"
            android:layout_below="@id/nameDisplay"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/levelDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Level:"
            android:textSize="36sp"
            android:layout_below="@id/scoreDisplay"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_menu_button"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/main_menu"
            android:textSize="28sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            android:background="@drawable/button_border"
            app:backgroundTint="@null"
            android:layout_below="@id/levelDisplay"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_again_button"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/play_again"
            android:textSize="28sp"
            android:layout_below="@id/main_menu_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white"
            android:background="@drawable/button_border_play"
            app:backgroundTint="@null"
            />
    </RelativeLayout>

</LinearLayout>
